--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-npm-package",
+  "name": "janisha-test-npm-package",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
